cabal-version:      2.4
name:               HasBlog
version:            0.1.0.0
synopsis:           Blog Generator 
homepage:           https://github.com/urxt/HasBlog
bug-reports:        https://github.com/urxt/HasBlog/issues
author:             urxt
maintainer:         80124020+urxt@users.noreply.github.com
category:           Learning, Web
extra-source-files: CHANGELOG.md
extra-doc-files: 
    README.md

common common-settings
    default-language: Haskell2010
    ghc-options: 
        -Wall

library
    import: common-settings
    exposed-modules: HasBlog
                        HasBlog.Convert1
                        HasBlog.Html
                            HasBlog.Html.Internal
                        HasBlog.Markup

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
         base
       , directory
    hs-source-dirs:   src
    default-language: Haskell2010

executable HasBlog
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        HasBlog

    hs-source-dirs:   app
    default-language: Haskell2010
