cabal-version:      2.4
name:               HasBlog
version:            0.1.0.0
synopsis:           Blog Generator
description:        A static blog/site generator.
homepage:           https://github.com/urxt/HasBlog
bug-reports:        https://github.com/urxt/HasBlog/issues
author:             urxt
maintainer:         80124020+urxt@users.noreply.github.com
category:           Learning, Web
extra-source-files: CHANGELOG.md
extra-doc-files: 
    README.md

common common-settings
    default-language: Haskell2010
    ghc-options: 
        -Wall

library
    import: common-settings
    hs-source-dirs:   src
    build-depends:
        base
      , directory
    exposed-modules: HasBlog
                        HasBlog.Convert
                        HasBlog.Html
                            HasBlog.Html.Internal
                        HasBlog.Markup

    default-language: Haskell2010

executable bloggen
    import: common-settings
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        HasBlog
    ghc-options:
        -O

    hs-source-dirs:   app
    default-language: Haskell2010
