cabal-version:      2.4
name:               HasBlog
version:            0.1.0.0
synopsis:           Blog Generator
description:        A static blog/site generator.
homepage:           https://github.com/urxt/HasBlog
bug-reports:        https://github.com/urxt/HasBlog/issues
author:             urxt
maintainer:         80124020+urxt@users.noreply.github.com
category:           Learning, Web
extra-source-files: CHANGELOG.md
extra-doc-files: 
    README.md

common common-settings
    default-language: Haskell2010
    ghc-options: 
        -Wall

library
    import: common-settings
    hs-source-dirs:   src
    build-depends:
        base
    exposed-modules: HasBlog
                        HasBlog.Convert
                        HasBlog.Html
                            HasBlog.Html.Internal
                        HasBlog.Markup

    default-language: Haskell2010

executable bloggen
    import: common-settings
    hs-source-dirs:   app
    main-is:          Main.hs
    other-modules: 
        OptParse
    build-depends:
        base,
        directory,
        optparse-applicative,
        HasBlog
    ghc-options:
        -O

    default-language: Haskell2010
